[MD Bookmarks] Fix crash when opening a chrome-extension:// URL.

This CL fixes a crash which was happening because the bookmark manager
API expects an extension to be associated with the WebUI.

BUG=713965

Review-Url: https://codereview.chromium.org/2864213002
Cr-Commit-Position: refs/heads/master@{#473518}

Former-commit-id: 862d903230e664fa75a09f6546366cb51e1e53bd