chrome/browser/extensions/extension_tab_util.cc
@@ -215,7 +215,8 @@ base::DictionaryValue* ExtensionTabUtil::OpenTab(
   // We can't load extension URLs into incognito windows unless the extension
   // uses split mode. Special case to fall back to a tabbed window.
   if (url.SchemeIs(kExtensionScheme) &&
-      !IncognitoInfo::IsSplitMode(function->extension()) &&
+      (!function->extension() ||
+       !IncognitoInfo::IsSplitMode(function->extension())) &&
       browser->profile()->IsOffTheRecord()) {
     Profile* profile = browser->profile()->GetOriginalProfile();
 
